--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^19.0.0",
@@ -21,11 +24,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/env": "^15.1.2",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
+    "pg": "^8.13.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
